--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Install dependencies
-        run: sudo apt-get install qt5-default libqt5websockets-dev g++ make
+        run: sudo apt-get install qt5-default libqt5websockets5-dev g++ make
 
       # Runs a set of commands using the runners shell
       - name: qmake and build
