--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -12,7 +12,8 @@ ms_ip=master.aceattorneyonline.com
 ms_port=27016
 multiclient_limit=16
 port=27016
-server_description=This is my flashy new server
-server_name=My First Server
+server_description=This is a placeholder server description. Tell the world of AO who you are here!
+server_name=An Unnamed Server
 webao_enable=true
 webao_port=27017
+modpass=changeme
