begin working on bans

--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -16,4 +16,7 @@ server_description=This is a placeholder server description. Tell the world of A
 server_name=An Unnamed Server
 webao_enable=true
 webao_port=27017
-modpass=changeme
+
+[Moderators]
+; Make sure you change this before running your server!
+password_change_me=user_change_me
