implement advanced permissions system

--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -7,7 +7,6 @@ hostname=$H
 language=en
 max_message_size=256
 max_players=100
-modpass=password
 ms_ip=master.aceattorneyonline.com
 ms_port=27016
 multiclient_limit=16
@@ -16,7 +15,5 @@ server_description=This is a placeholder server description. Tell the world of A
 server_name=An Unnamed Server
 webao_enable=true
 webao_port=27017
-
-[Moderators]
-; Make sure you change this before running your server!
-password_change_me=user_change_me
+auth=simple
+modpass=changeme
