--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
           qmake "CONFIG += qtquickcompiler" akashi.pro
           nmake
           windeployqt bin\akashi.exe --release --no-opengl-sw
-          rename bin\config_sample bin\config
+          mv bin\config_sample bin\config
           
       - name: Upload zip
         uses: actions/upload-artifact@v2
