update config sample

--- a/bin/config_sample/areas.ini
+++ b/bin/config_sample/areas.ini
@@ -1,5 +1,9 @@
 [Basement]
 background=gs4
+protected_area=true
+iniswap_allowed=false
 
 [Courtroom 1]
 background=gs4
+protected_area=false
+iniswap_allowed=true
