add all evidence mods EXCEPT hiddencm

--- a/bin/config_sample/areas.ini
+++ b/bin/config_sample/areas.ini
@@ -2,8 +2,10 @@
 background=gs4
 protected_area=true
 iniswap_allowed=false
+evidence_mod=cm
 
 [Courtroom 1]
 background=gs4
 protected_area=false
 iniswap_allowed=true
+evidence_mod=ffa
