Add automatic motd on join; Add /motd command
Why would anyone use /motd?

--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -8,6 +8,7 @@ ms_ip=master.aceattorneyonline.com
 ms_port=27016
 port=27016
 server_description=This is a placeholder server description. Tell the world of AO who you are here!
+motd=This is your cool motto of the day!
 server_name=An Unnamed Server
 webao_enable=true
 webao_port=27017
