--- a/bin/config_sample/areas.ini
+++ b/bin/config_sample/areas.ini
@@ -3,9 +3,11 @@ background=gs4
 protected_area=true
 iniswap_allowed=false
 evidence_mod=cm
+blankposting_allowed=true
 
 [1:Courtroom 1]
 background=gs4
 protected_area=false
 iniswap_allowed=true
 evidence_mod=ffa
+blankposting_allowed=true
