Add message_floodguard to default config.ini

--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -19,6 +19,7 @@ logging=modcall
 maximum_statements=10
 multiclient_limit=15
 maximum_characters=256
+message_floodguard=250
 
 [Dice]
 max_value=100
