--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,10 @@ jobs:
           mv bin/config_sample bin/config
 
       - name: Run tests
-        run |
-          for test in bin_tests/; do
-            ./$test
-          done;
+        run: |
+            for test in bin_tests/; do
+              ./$test
+            done;
           
       - name: Upload binary
         uses: actions/upload-artifact@v2
