Fix same syntax error in another location
Hey, look, Windows builds ain't THAT important, yeah?

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
           mv bin\config_sample bin\config
 
       - name: Run tests
-        run |
+        run: |
           for test in bin_tests/; do
             ./$test
           done;
