Add the `core` library to the tests' library path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Run tests
         run: |
             for test in bin_tests/; do
-              ./$test
+              LD_LIBRARY_PATH=./bin:$LD_LIBRARY_PATH ./$test
             done;
           
       - name: Upload binary
@@ -62,7 +62,7 @@ jobs:
       - name: Run tests
         run: |
           for test in bin_tests/; do
-            ./$test
+            LD_LIBRARY_PATH=./bin:$LD_LIBRARY_PATH ./$test
           done;
           
       - name: Upload zip
