Iterate through the FILES inside `bin_tests/`
I'm starting to get the same feeling from debugging CI as I get from testing in production.

Eh, whatever.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run tests
         run: |
-            for test in bin_tests/; do
+            for test in bin_tests/*; do
               LD_LIBRARY_PATH=./bin:$LD_LIBRARY_PATH ./$test
             done;
           
@@ -61,7 +61,7 @@ jobs:
 
       - name: Run tests
         run: |
-          for test in bin_tests/; do
+          for test in bin_tests/*; do
             LD_LIBRARY_PATH=./bin:$LD_LIBRARY_PATH ./$test
           done;
           
