--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -20,6 +20,7 @@ maximum_statements=10
 multiclient_limit=15
 maximum_characters=256
 message_floodguard=250
+asset_url=Your WebAO asset url here.
 
 [Dice]
 max_value=100
