--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -29,3 +29,12 @@ max_dice=100
 webhook_enabled=false
 webhook_url=Your webhook url here.
 webhook_sendfile=false
+
+[Password]
+password_requirements = true
+pass_min_length = 8
+pass_max_length = 0
+pass_required_mix_case = true
+pass_required_numbers = true
+pass_required_special = true
+pass_contain_username = false
