--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -37,4 +37,4 @@ pass_max_length = 0
 pass_required_mix_case = true
 pass_required_numbers = true
 pass_required_special = true
-pass_contain_username = false
+pass_can_contain_username = false
