This is just barely held together by hopes and dreams

--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -22,6 +22,10 @@ maximum_characters=256
 message_floodguard=250
 asset_url=Your WebAO asset url here.
 
+[Advertiser]
+ms_ip=master.aceattorneyonline.com
+ms_debug_info=false
+
 [Dice]
 max_value=100
 max_dice=100
