Discord webhook refactor
Completely refactors the Discord class, breaking it up into separate functions and slots, removing circular dependencies, and replacing most pointers with const references.

--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -28,7 +28,7 @@ max_dice=100
 
 [Discord]
 webhook_enabled=false
-webhook_url=Your webhook url here.
+webhook_url=
 webhook_sendfile=false
 webhook_content=
 
