Implement new advertiser
I want to die.

--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -60,6 +60,18 @@ message_floodguard=250
 ; The URL of the server's remote repository, sent to the client during their initial handshake. Used by WebAO users for custom content.
 asset_url=
 
+[ModernAdvertiser]
+; Options for the HTTP based Masterserver.
+
+; Whether or not the server should appear on the master server.
+advertise=false
+
+; Wether the advertiser prints additional debug info 
+debug=false
+
+; The IP address of the master server. Unless something happens to the default one, you shouldn't change this.
+ms_ip=https://ms3.oldmud0.workers.dev/servers
+
 [Dice]
 ; The maximum number of sides dice can be rolled with.
 max_value=100
