--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -82,6 +82,7 @@ max_dice=100
 [Discord]
 ; Whether the discord webhook is enabled or not.
 ; The server will send messages to this webhook whenever a modcall is sent.
+; Changing this requires a server restart.
 webhook_enabled=false
 
 ; The URL of the discord webhook to send messages to. Must contain the webhook ID and token.
