Implement Webhook for Ban Information
Co-Authored-By: Rose Witchaven <32779090+in1tiate@users.noreply.github.com>

--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -94,6 +94,9 @@ webhook_sendfile=false
 ; Additional text to send with the webhook message. Usually for adding tags for role. Ensure the format is <@&[RoleID]>.
 webhook_content=
 
+; Enables the ban webhook.
+webhook_ban_enabled = false
+
 [Password]
 ; Whether or not to enforce password requirements. Only applicable under advanced authorization.
 password_requirements = true
