Update ban webhook to utilize different url
+ Update sample config
+ Clarify webhook urls in the config and configmanager.

--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -86,16 +86,19 @@ max_dice=100
 webhook_enabled=false
 
 ; The URL of the discord webhook to send messages to. Must contain the webhook ID and token.
-webhook_url=
+webhook_modcall_url=
 
 ; Whether to attach a file containing the area log when a modcall message is sent to the webhook.
-webhook_sendfile=false
+webhook_modcall_sendfile=false
 
 ; Additional text to send with the webhook message. Usually for adding tags for role. Ensure the format is <@&[RoleID]>.
 webhook_content=
 
 ; Enables the ban webhook.
 webhook_ban_enabled = false
+
+; The URL of the ban discord webhook to send messages to. Must contain the webhook ID and token.
+webhook_ban_url=
 
 [Password]
 ; Whether or not to enforce password requirements. Only applicable under advanced authorization.
