--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -109,6 +109,9 @@ webhook_uptime_enabled = false
 ; The time between message posting. This time is in minutes, with a default of 60.
 webhook_uptime_time = 60
 
+; The URL of the uptime discord webhook to send messages to. Must contain the webhook ID and token.
+webhook_uptime_url=
+
 [Password]
 ; Whether or not to enforce password requirements. Only applicable under advanced authorization.
 password_requirements = true
