Update config descriptions for Discord.ini

--- a/bin/config_sample/discord.ini
+++ b/bin/config_sample/discord.ini
@@ -1,19 +1,17 @@
 [Discord]
-; Whether the discord webhook is enabled or not.
-; The server will send messages to this webhook whenever a modcall is sent.
-; Changing this requires a server restart.
+; Enables the Discord Webhook Integration
 webhook_enabled=false
 
-;Enables the modcall webhook to post a notification when a modcall is made.
+; Enables the modcall webhook to post a message when a modcall is made.
 webhook_modcall_enabled=false
 
-; The URL of the discord webhook to send messages to. Must contain the webhook ID and token.
+; The URL of the modcall webhook. Must contain the webhook ID and token.
 webhook_modcall_url=
 
-; Additional text to send with the webhook message. Usually for adding tags for role. Ensure the format is <@&[RoleID]>.
+; Optional text. Usually for adding tags for roles. Ensure the format is <@&[RoleID]>.
 webhook_modcall_content=
 
-; Whether to attach a file containing the area log when a modcall message is sent to the webhook.
+; Attaches a logfile of the area to the modcall webhook.
 webhook_modcall_sendfile=false
 
 ; Enables the ban webhook.
@@ -25,8 +23,8 @@ webhook_ban_url=
 ; Enables Uptime Webhook.
 webhook_uptime_enabled = false
 
-; The time between message posting. This time is in minutes, with a default of 60.
+; The time between message posting. Time is in minutes.
 webhook_uptime_time = 60
 
-; The URL of the uptime discord webhook to send messages to. Must contain the webhook ID and token.
+; The URL of the Uptime Webhook. Must contain the webhook ID and token.
 webhook_uptime_url=
