Document change in config.ini

--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -39,9 +39,10 @@ modpass=changeme
 ; This is only used for modcall logging, or if the webhook_sendfile is enabled.
 logbuffer=500
 
-; The server logging type. Valid values here are "modcall" and "full". 
+; The server logging type. Valid values here are "modcall","full" and "fullarea". 
 ; Modcall logging will only save an area log file if a modcall is sent. 
 ; Full logging will log every event in every area, and will output to a new file every day.
+; FullArea logging will log every event in every area, seperating them into individual files and output to a new one every day.
 logging=modcall
 
 ; The maximum number of statements that can be recorded in the testimony recorder.
