--- a/bin/config_sample/discord.ini
+++ b/bin/config_sample/discord.ini
@@ -28,3 +28,6 @@ webhook_uptime_time = 60
 
 ; The URL of the Uptime Webhook. Must contain the webhook ID and token.
 webhook_uptime_url=
+
+; The color code for the webhook. Allows customization of the color used in the embeed.
+webhook_color=
