--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -74,7 +74,10 @@ advertise=false
 debug=false
 
 ; The IP address of the master server. Unless something happens to the default one, you shouldn't change this.
-ms_ip=https://ms3.oldmud0.workers.dev/servers
+ms_ip=https://servers.aceattorneyonline.com/servers
+
+; Optional hostname of your server. Can either be an IP or a DNS name. Disabled automatic IP detection of ms3.
+hostname=
 
 [Dice]
 ; The maximum number of sides dice can be rolled with.
