Purge ms2 advertiser and streamline naming

--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -1,15 +1,6 @@
 [Options]
-; Whether or not the server should appear on the master server.
-advertise=true
-
 ; The maximum number of players that can join the server at once.
 max_players=100
-
-; The IP address of the master server. Unless something happens to the default one, you shouldn't change this.
-ms_ip=master.aceattorneyonline.com
-
-; The port of the master server. Unless something happens to the default one, you shouldn't change this.
-ms_port=27016
 
 ; The TCP port to listen for incoming connections on.
 port=27016
@@ -64,11 +55,11 @@ afk_timeout = 300
 ; The URL of the server's remote repository, sent to the client during their initial handshake. Used by WebAO users for custom content.
 asset_url=http://attorneyoffline.de/base/
 
-[ModernAdvertiser]
-; Options for the HTTP based Masterserver.
+[Advertiser]
+; Options for the Masterserver.
 
 ; Whether or not the server should appear on the master server.
-advertise=false
+advertise=true
 
 ; Wether the advertiser prints additional debug info 
 debug=false
@@ -76,7 +67,7 @@ debug=false
 ; The IP address of the master server. Unless something happens to the default one, you shouldn't change this.
 ms_ip=https://servers.aceattorneyonline.com/servers
 
-; Optional hostname of your server. Can either be an IP or a DNS name. Disabled automatic IP detection of ms3.
+; Optional hostname of your server. Can either be an IP or a DNS name. Disables automatic IP detection of ms3.
 hostname=
 
 [Dice]
