--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,20 @@ on: [push, pull_request]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  formatting-check:
+    name: check-clang-format
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run clang-format style check.
+      uses: jidicula/clang-format-action@v4.5.0
+      with:
+        clang-format-version: '14'
+        check-path: '.'
+        fallback-style: 'Mozilla' # optional
+        
   build-linux:
+    needs: formatting-check
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -44,6 +57,7 @@ jobs:
           path: bin/
   
   build-windows:
+    needs: formatting-check
     runs-on: windows-latest
     
     steps:
