Consistent key/argument
* layout in command_extensions.ini

--- a/bin/config_sample/command_extensions.ini
+++ b/bin/config_sample/command_extensions.ini
@@ -43,8 +43,8 @@ aliases = clear_notecard notecardclear
 [allow_blankposting]
 aliases = allowblankposting
 
-[forceimmediate]
-aliases = force_noint_pres
+[force_noint_pres]
+aliases = forceimmediate
 
 [allow_iniswap]
 aliases = allowiniswap
@@ -76,8 +76,8 @@ aliases = updateban
 [ignore_bglist]
 aliases = ignorebglist
 
-[togglewtce]
-aliases = toggle_wtce
+[toggle_wtce]
+aliases = togglewtce
 
-[toggleshouts]
-aliases = toggle_shouts
+[toggle_shouts]
+aliases = toggleshouts
