Enable websocket port overwrite in advertiser
*Advertises port 80 if the AO Server is behind a reverse proxy, like cloudflare tunnels.

--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -73,6 +73,9 @@ ms_ip=https://servers.aceattorneyonline.com/servers
 ; Optional hostname of your server. Can either be an IP or a DNS name. Disables automatic IP detection of ms3.
 hostname=
 
+; Wether or not the server overwrites the advertised webao port to port 80 in order to utilise Cloudflare tunnels.
+cloudflare_enabled=false
+
 [Dice]
 ; The maximum number of sides dice can be rolled with.
 max_value=100
