--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,10 +82,10 @@ jobs:
           
       - name: Run tests
         run: |
-            cd ${{github.workspace}}\bin_tests\
-            for test in .\unittest_*; do
-              LD_LIBRARY_PATH=.\bin:$LD_LIBRARY_PATH .\$test
-            done;
+          cd cd ${{github.workspace}}/bin_tests
+          for test in ./*; do
+            LD_LIBRARY_PATH=./bin:$LD_LIBRARY_PATH ./$test
+          done;
         shell: bash
 
       - name: Deploy OpenSSL
