--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,7 +83,7 @@ jobs:
           
       - name: Run tests
         run: |
-          for test in ./unittest_*; do
+          for test in ./*; do
             LD_LIBRARY_PATH=./bin:$LD_LIBRARY_PATH ./$test
           done;
         shell: bash
