I swear to god Bill Gates why does your OS suck so much?

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,13 +79,13 @@ jobs:
           nmake
           windeployqt bin\akashi.exe --release --no-opengl-sw
           mv bin\config_sample bin\config
-          cd $Env:GITHUB_WORKSPACE/bin_tests
           
       - name: Run tests
         run: |
-          for test in ./*; do
-            LD_LIBRARY_PATH=./bin:$LD_LIBRARY_PATH ./$test
-          done;
+            cd ${{github.workspace}}/bin_tests/
+            for test in bin_tests/unittest_*; do
+              LD_LIBRARY_PATH=./bin:$LD_LIBRARY_PATH ./$test
+            done;
         shell: bash
 
       - name: Deploy OpenSSL
