--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,7 +92,7 @@ jobs:
       - name: Run tests
         run: |
             for test in ./unittest_*; do
-              LD_LIBRARY_PATH=../bin:$LD_LIBRARY_PATH ../$test
+              LD_LIBRARY_PATH=../bin:$LD_LIBRARY_PATH ./$test
             done;
         working-directory: ${{ github.workspace }}/bin_tests
         shell: bash
