--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
         run: |
             cd ${{github.workspace}}/bin_tests/
             for test in ./unittest_*; do
-              echo $test
+              LD_LIBRARY_PATH=./bin:$LD_LIBRARY_PATH ./$test
             done;
           
       - name: Upload binary
@@ -91,8 +91,8 @@ jobs:
           
       - name: Run tests
         run: |
-            for test in ./unittest_*; do
-              LD_LIBRARY_PATH=../bin:$LD_LIBRARY_PATH ./$test
+            for test in ./*; do
+              echo $test;
             done;
         working-directory: ${{ github.workspace }}/bin_tests
         shell: bash
