--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,8 +91,8 @@ jobs:
           
       - name: Run tests
         run: |
-            for test in ./*; do
-              echo $test;
+            for test in *.exe; do
+              LD_LIBRARY_PATH=../bin:$LD_LIBRARY_PATH ./${test}
             done;
         working-directory: ${{ github.workspace }}/bin_tests
         shell: bash
