--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,7 +91,7 @@ jobs:
           
       - name: Run tests
         run: |
-            for %i in (.\unittest_*.exe) do %i
+            for %%i in (.\unittest_*.exe) do %%i
         working-directory: ${{ github.workspace }}/bin_tests
         shell: cmd
 
