--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,9 +92,9 @@ jobs:
       - name: Run tests
         run: |
             windeployqt .\unittest_music_manager.exe --no-translations
-            for %%i in (.\unittest_*.exe) do %%i
+            $tests = Get-ChildItem -Filter "*.exe" -Path ".\"
+            foreach ($test in $tests) { & ".\$test"}
         working-directory: ${{ github.workspace }}/bin_tests
-        shell: cmd
 
       - name: Deploy OpenSSL
         run: |
