--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,7 +93,7 @@ jobs:
         run: |
             windeployqt .\unittest_music_manager.exe --no-translations
             $tests = Get-ChildItem -Filter "*.exe" -Path ".\"
-            foreach ($test in $tests) { & ".\$test"}
+            foreach ($test in $tests) { & "$test"}
         working-directory: ${{ github.workspace }}/bin_tests
 
       - name: Deploy OpenSSL
