--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,9 +91,13 @@ jobs:
           
       - name: Run tests
         run: |
+            Set-Location -Path $Env:GITHUB_WORKSPACE/bin_tests
+            ("Current folder : " + (Get-Location))
             windeployqt .\unittest_music_manager.exe --no-translations
             $tests = Get-ChildItem -Filter "*.exe" -Path ".\"
-            foreach ($test in $tests) { & "$test"}
+            foreach ($test in $tests) {
+            Write-Host ("Executing test file : " + $test.Name) 
+            & "$test"}
         working-directory: ${{ github.workspace }}/bin_tests
 
       - name: Deploy OpenSSL
