--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,10 +94,10 @@ jobs:
             Set-Location -Path $Env:GITHUB_WORKSPACE/bin_tests
             ("Current folder : " + (Get-Location))
             windeployqt .\unittest_music_manager.exe --no-translations
-            $tests = Get-ChildItem -Filter "*.exe" -Path ".\"
+            $tests = Get-ChildItem -Filter "unittest_*.exe" -Path ".\"
             foreach ($test in $tests) {
             Write-Host ("Executing test file : " + $test.Name) 
-            & "$test"}
+            & ".\$test"}
         working-directory: ${{ github.workspace }}/bin_tests
 
       - name: Deploy OpenSSL
