--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,13 +91,14 @@ jobs:
           
       - name: Run tests
         run: |
+            $ErrorActionPreference = "Stop"
             Set-Location -Path $Env:GITHUB_WORKSPACE/bin_tests
             ("Current folder : " + (Get-Location))
             windeployqt .\unittest_music_manager.exe --no-translations
             $tests = Get-ChildItem -Filter "unittest_*.exe" -Path ".\"
             foreach ($test in $tests) {
             Write-Host ("Executing test file : " + $test.Name) 
-            & ".\$test"}
+            & ".\$test.Name"}
         working-directory: ${{ github.workspace }}/bin_tests
 
       - name: Deploy OpenSSL
