--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,9 +96,9 @@ jobs:
             ("Current folder : " + (Get-Location))
             windeployqt .\unittest_music_manager.exe --no-translations
             $tests = Get-ChildItem -Filter "unittest_*.exe" -Path ".\"
-            foreach ($test in $tests) {
-            Write-Host ("Executing test file : " + $test.Name) 
-            & ".\$test.Name"}
+            foreach ($test in $tests.Name) {
+            Write-Host ("Executing test file : " + $test) 
+            & ".\$test"}
         working-directory: ${{ github.workspace }}/bin_tests
 
       - name: Deploy OpenSSL
