--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,12 +91,13 @@ jobs:
           
       - name: Run tests
         run: |
+            $env:Path += (";" + "$Env:GITHUB_WORKSPACE\bin")
             $ErrorActionPreference = "Stop"
             Set-Location -Path $Env:GITHUB_WORKSPACE/bin_tests
             ("Current folder : " + (Get-Location))
             windeployqt .\unittest_music_manager.exe --no-translations
             $tests = Get-ChildItem -Filter "unittest_*.exe" -Path ".\" | Select -ExpandProperty Name
-            foreach ($test in $tests.Name) {
+            foreach ($test in $tests) {
             Write-Host ("Executing test file : " + $test) 
             & ".\$test"}
         working-directory: ${{ github.workspace }}/bin_tests
