--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -113,4 +113,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: akashi-windows
-          path: bin\
+          path: bin_tests\
