--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,15 +91,9 @@ jobs:
           
       - name: Run tests
         run: |
-            Set-ExecutionPolicy -ExecutionPolicy "Bypass" -Force
-            $env:Path += (";" + "$Env:GITHUB_WORKSPACE\bin")
-            Set-Location -Path $Env:GITHUB_WORKSPACE/bin_tests
-            ("Current folder : " + (Get-Location))
             windeployqt .\unittest_music_manager.exe --no-translations
             $tests = Get-ChildItem -Filter "unittest_*.exe" -Path ".\" | Select -ExpandProperty Name
-            foreach ($test in $tests) {
-            Write-Host ("Executing test file : " + $test) 
-            & ".\$test"}
+            foreach ($test in $tests) {Write-Host(& ".\$test")}
         working-directory: ${{ github.workspace }}/bin_tests
 
       - name: Deploy OpenSSL
