Try older Windows runner

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
   
   build-windows:
     needs: formatting-check
-    runs-on: windows-latest
+    runs-on: windows-2019
     
     steps:
       - uses: actions/checkout@v2
