--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,13 +88,14 @@ jobs:
           nmake
           windeployqt bin\akashi.exe --release --no-opengl-sw
           mv bin\config_sample bin\config
-          
-      - name: Run tests
-        run: |
-            windeployqt .\unittest_music_manager.exe --no-translations
-            $tests = Get-ChildItem -Filter "unittest_*.exe" -Path ".\" | Select -ExpandProperty Name
-            foreach ($test in $tests) {Write-Host(& ".\$test")}
-        working-directory: ${{ github.workspace }}/bin_tests
+
+# As QTest seems to be non-functional on Windows runners this is commented out. If a solution is found, please fix and uncomment - 27.06.2022 / Salanto         
+#      - name: Run tests
+#        run: |
+#            windeployqt .\unittest_music_manager.exe --no-translations
+#            $tests = Get-ChildItem -Filter "unittest_*.exe" -Path ".\" | Select -ExpandProperty Name
+#            foreach ($test in $tests) {Write-Host(& ".\$test")}
+#        working-directory: ${{ github.workspace }}/bin_tests
 
       - name: Deploy OpenSSL
         run: |
@@ -107,4 +108,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: akashi-windows
-          path: bin_tests\
+          path: bin\
