Add regression test to ACL ini handler (#281)
* Add QTest for issue validation

* Add file-existence check for test

* Update acl_roles_handler.cpp

* Appease clang

* Only look for unittest files

* Where art thou?

* Change root directory when running test

* Fix pathing on Windows CI

* Windows please just accept this path

* Too many CDs

* Bash is evil.

* Wildcard moment

* I swear to god Bill Gates why does your OS suck so much?

* Add cache, use working-directory

* Maybe? Maybe not? Who the fuck cares at this point

* Fix library path

Holy shit these tests almost work on Windows.

* FUCKING HELL

* Where art thou? 2nd Edition

* Edited wrong one

* Re-add execution code

* Remove Linux stuff

* Do it in batch

Bash is evil.

* Set to CMD

* I am now expected

* Missing libs

Should be good enough :shrug:

* Powershell my beloved, save me

* Adjust pathing (again)

* Add some debug info

* Powershell syntax shenanigans

* I distrust Github Actions now

* I swear my windows is licensed, please work

* More debug info

* More debug

* For the love of all that is holy why the fuck do you not work

* Cheap path hack

* Upload test folder for debug

* Set Execution Policy<

Apparently tests on the Windows CI never worked???

* Remove debug information

* Does this even work? If not, fuck

* Try older Windows runner

* Comment out non-functional Windows QTest action

* Note that Linux is still functional, so QTest for Windows has to be conducted trough QtCreator till a solution is found.

* Unbreak-test

* Use latest runner version

Co-authored-by: TrickyLeifa <date.epoch@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,9 +47,11 @@ jobs:
           qmake
           make
           mv bin/config_sample bin/config
+          
       - name: Run tests
         run: |
-            for test in bin_tests/*; do
+            cd ${{github.workspace}}/bin_tests/
+            for test in ./unittest_*; do
               LD_LIBRARY_PATH=./bin:$LD_LIBRARY_PATH ./$test
             done;
           
@@ -67,8 +69,17 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ilammy/msvc-dev-cmd@v1
       
+      - name: Cache Qt
+        id: cache-qt
+        uses: actions/cache@v1  # not v2!
+        with:
+          path: ../Qt
+          key: ${{ runner.os }}-QtCache
+
       - name: Install Qt
         uses: jurplel/install-qt-action@v2
+        with:
+          cached: ${{ steps.cache-qt.outputs.cache-hit }}
      
       - name: Build
         run: |
@@ -77,12 +88,14 @@ jobs:
           nmake
           windeployqt bin\akashi.exe --release --no-opengl-sw
           mv bin\config_sample bin\config
-      - name: Run tests
-        run: |
-          for test in bin_tests/*; do
-            LD_LIBRARY_PATH=./bin:$LD_LIBRARY_PATH ./$test
-          done;
-        shell: bash
+
+# As QTest seems to be non-functional on Windows runners this is commented out. If a solution is found, please fix and uncomment - 27.06.2022 / Salanto         
+#      - name: Run tests
+#        run: |
+#            windeployqt .\unittest_music_manager.exe --no-translations
+#            $tests = Get-ChildItem -Filter "unittest_*.exe" -Path ".\" | Select -ExpandProperty Name
+#            foreach ($test in $tests) {Write-Host(& ".\$test")}
+#        working-directory: ${{ github.workspace }}/bin_tests
 
       - name: Deploy OpenSSL
         run: |
