--- a/bin_tests/config/config.ini
+++ b/bin_tests/config/config.ini
@@ -8,8 +8,11 @@ port=27016
 ; The server description that will appear on the master server.
 server_description=This is a placeholder server description. Tell the world of AO who you are here!
 
-; The server's name. This appears both on the master server, and in messages sent to users by the server.
+; The server's name. This appears on the master server.
 server_name=An Unnamed Server
+
+; The server's nickname. This appears in messages sent to users by the server.
+server_nick=NickName
 
 ; The server's Message of the Day. This will be sent in OOC to joining users.
 motd=MOTD is not set.
