--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,7 +85,7 @@ jobs:
         run: |
             cd ${{github.workspace}}/bin_tests/
             for test in ./unittest_*; do
-              LD_LIBRARY_PATH=./bin:$LD_LIBRARY_PATH ./$test
+              LD_LIBRARY_PATH=../bin:$LD_LIBRARY_PATH ./$test
             done;
 
       - name: Copy coverage files
