--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
         run: |
             cd ${{github.workspace}}/bin_tests/
             for test in ./unittest_*; do
-              LD_LIBRARY_PATH=./bin:$LD_LIBRARY_PATH ./$test
+              LD_LIBRARY_PATH=../bin:$LD_LIBRARY_PATH ./$test
             done;
           
       - name: Upload binary
