--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,7 +92,7 @@ jobs:
 
       - name: Copy coverage files
         run: |
-          cd ${{github.workspace}}/core
+          cd ${{github.workspace}}
           gcov *.o
           cd ..
           mkdir coverage
