--- a/bin/config_sample/config.ini
+++ b/bin/config_sample/config.ini
@@ -5,6 +5,9 @@ max_players=100
 ; The port to listen for incoming connections on.
 port=27016
 
+; The port to advertise for SSL.
+secure_port=-1
+
 ; The server description that will appear on the master server.
 server_description=This is a placeholder server description. Tell the world of AO who you are here!
 
