--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,6 +70,9 @@ jobs:
       
       - name: Install Qt
         uses: jurplel/install-qt-action@v4
+        with:
+          modules: qtwebsockets
+          cache: true
      
       - name: Build
         run: |
