Unify evidence_mod hidden_cm command and config values

--- a/bin/config_sample/areas.ini
+++ b/bin/config_sample/areas.ini
@@ -13,3 +13,7 @@ iniswap_allowed=true
 evidence_mod=ffa
 blankposting_allowed=true
 force_immediate=false
+
+; Example area with hidden evidence mod:
+; evidence_mod=hidden_cm allows case makers to hide evidence from specific sides
+; by adding <owner=DEF> or <owner=PRO> to evidence descriptions
