--- a/bin/config_sample/areas.ini
+++ b/bin/config_sample/areas.ini
@@ -13,3 +13,8 @@ iniswap_allowed=true
 evidence_mod=ffa
 blankposting_allowed=true
 force_immediate=false
+
+; Example area with hidden evidence mod:
+; evidence_mod=hidden_cm (recommended) or evidence_mod=hiddencm (legacy)
+; Both allow case makers to hide evidence from specific sides
+; by adding <owner=DEF> or <owner=PRO> to evidence descriptions
