--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,11 +33,17 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
       
-      - name: Install dependencies
-        uses: awalsh128/cache-apt-pkgs-action@latest
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v4
         with:
-          packages: qt5-qmake libqt5websockets5-dev g++ make
-          version: 1.0
+          aqtversion: '==3.1.*'
+          version: '6.5.3'
+          host: 'linux'
+          target: 'desktop'
+          arch: 'gcc_64'
+          cache: true
+          cache-key-prefix: install-qt-action
+          modules: 'qtwebsockets'
           
       # Runs a set of commands using the runners shell
       - name: qmake and build
@@ -69,10 +75,14 @@ jobs:
       - uses: ilammy/msvc-dev-cmd@v1
       
       - name: Install Qt
-        uses: jurplel/install-qt-action@v4
+        uses: jurplel/install-qt-action@v3
         with:
-          modules: qtwebsockets
+          version: 6.5.3
+          target: desktop
+          arch: win64_msvc2019_64
           cache: true
+          cache-key-prefix: install-qt-action
+          modules: 'qtwebsockets'
      
       - name: Build
         run: |
@@ -81,13 +91,6 @@ jobs:
           nmake
           windeployqt bin\akashi.exe --release --no-opengl-sw
           mv bin\config_sample bin\config
-
-      - name: Deploy OpenSSL
-        run: |
-          curl https://download.firedaemon.com/FireDaemon-OpenSSL/openssl-1.1.1t.zip --output openssl-1.1.1.zip
-          tar -xf openssl-1.1.1.zip
-          copy .\openssl-1.1\x64\bin\libcrypto-1_1-x64.dll .\bin\libcrypto-1_1-x64.dll 
-          copy .\openssl-1.1\x64\bin\libssl-1_1-x64.dll .\bin\libssl-1_1-x64.dll
           
       - name: Upload zip
         uses: actions/upload-artifact@v4
