Force console on Release builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,7 @@ if(WIN32)
     set(APP_ICON_RESOURCE_WINDOWS "${CMAKE_CURRENT_SOURCE_DIR}/data/icon/logo-akashi.rc")
     target_sources(akashi PRIVATE ${APP_ICON_RESOURCE_WINDOWS})
   endif()
+  set_target_properties(akashi PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:CONSOLE /ENTRY:mainCRTStartup")
 endif()
 
 set_target_properties(akashi PROPERTIES
